--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!Doctype html>
 <html>
 <head>
-         <title>Minha Primeira Página HTML</title>
+<title>Currícul - Karoline MeloL</title>
 <head>
 <body>
-         <h1>Primeira Entrega</h1>
-         <p> Currículo Simples</p>
-
+<h1>Karoline Pacheco de Melo</h1>
+<h2>Identificação</h2>
+<p> Currículo Simples</p>
+<h2>Formação Acadêmica</h2>
+<p> Currículo Simples</p>
+<h2>Formação complementar</h2>
+<p> Currículo Simples</p>
+<h2>Atuação Profissional</h2>
+<p> Currículo Simples</p>
 </body>
 </html>
