--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!Doctype html>
 <html>
+    <div class="align.justify"</div></div>
 <head>
-<title>Currícul - Karoline MeloL</title>
-<head>
-<body>
-<h1>Karoline Pacheco de Melo</h1>
+<title>Currículo - Karoline MeloL</title>
+</head>
+<> 
+    <h1>Karoline Pacheco de Melo</h1>
+    
 <h2>Identificação</h2>
-<p> Currículo Simples</p>
+<p><b>Nome: </b>Karoline Pacheco de Melo<br><b>Lattes: </b>http://lattes.cnpq.br/0873052496374491<br><b>LinkedIn: </b>https://www.linkedin.com/in/karoline-melo-09a152280<br><b>E-mail: </b>karolinemeloieq@gmail.com</p><br>
 <h2>Formação Acadêmica</h2>
-<p> Currículo Simples</p>
+<p><b>2021</b><br>Graduação em andamento em Direito.<br>
+    Universidade Federal de Juiz de Fora, UFJF, Brasil.<br>
+    <p><b>2016 - 2021</b><br>
+    Graduação em Ciências Contábeis.<br>
+    Universidade Federal de Juiz de Fora, UFJF, Brasil.<br>
+    <b>Título:</b> <cite>CONTABILIDADE DE CUSTOS COMO FERRAMENTA NO PROCESSO DECISÓRIO: ESTUDO DE CASO EM UMA PADARIA DE JUIZ DE FORA.</cite><br>
+   <b>Orientador: </b>Prof. Dr. Fabrício Pereira Soares.</p>
 <h2>Formação complementar</h2>
-<p> Currículo Simples</p>
+<p><b>2023</b><br>
+    Google Data Analytics (PT) Specialization.<br>(Carga horária: 19h).<br>Google Inc., Google, Estados Unidos.<br><br>
+    <b>2023</b><br>
+    Web Development with Python.<br>(Carga horária: 53h).<br>IBM SkillsBuild, IBM, Estados Unidos (USA).<br><br>
+    <b>2023</b><br>
+    CS50: Introduction to Computer Science.<br>(Carga horária: 220h).<br>Havard University, HAVARD UNIVERSIT, Estados Unidos (USA).<br><br>
+    <B>2023 - 2023</B><br>
+    Qualificação em Dimensionamento da Força de Trabalho.<br>(Carga horária: 20h).<br>Escola Nacional de Administração Pública, ENAP, Brasil.<br><br>
+    <b>2022 - 2022</b>
+    Imposto de Renda de Pessoa Física.<br>(Carga horária: 5h).<br>Mundo Contábil, MC, Brasil.<br><br>
+    <b>2022 - 2022</b><br>
+    Gestão para Resultados.<br>(Carga horária: 20h).<br>Universidade Federal de Juiz de Fora, UFJF, Brasil.<br><br>
+    <b>2022 - 2022</b><br>
+    Língua Brasileira de Sinais - LIBRAS.<br>(Carga horária: 40h).<br>Universidade Federal de Juiz de Fora, UFJF, Brasil.<br><br>
+    <b>2021 - 2021</b>
+    Sistema Eletrônico de Informações - SEI! USAR.<br>(Carga horária: 20h).<br>Escola Nacional de Administração Pública, ENAP, Brasil.<br><br>
+    <b>2021 - 2021</b><br>
+    Orçamento Público.<br>(Carga horária: 40h).<br>Escola Nacional de Administração Pública, ENAP, Brasil.<br><br>
+    <b>2021 - 2021</b>
+    Introdução à Libras.<br>(Carga horária: 60h).<br>Escola Nacional de Administração Pública, ENAP, Brasil.<br><br>
+    <b>2020 - 2020</b>
+    MEI na prática.<br>(Carga horária: 2h).<br>Serviço de Apoio às Micro e Pequenas Empresas de Belo Horizonte, SEBRAE/MG, Brasil.<br><br>
+    <b>2020 - 2020</b>
+    Simples Nacional.<br>(Carga horária: 3h).<br>Serviço de Apoio às Micro e Pequenas Empresas de Belo Horizonte, SEBRAE/MG, Brasil.<br></p>
 <h2>Atuação Profissional</h2>
-<p> Currículo Simples</p>
+<p><b>Universidade Federal de Juiz de Fora, UFJF, Brasil.</b><br>
+    2020 - Atual<br><b>Vínculo: </b>Servidor Público.<br><b>Enquadramento Funcional: </b>Técnico Administrativo em Educação.<br><b>Outras informações: </b>Atualmente, atuando como Gerente Acadêmica e Administrativa de Extensão, na Pró-reitoria de Extensão da Universidade Federal de Juiz de Fora<br><br>
+    <b>Tarumã Distribuidora de Bebidas, REVENDA - AMBEV, Brasil.</b><br>
+    2018 - 2020<br><b>Vínculo: </b>Celetista.<br><b>Enquadramento Funcional: </b>Assistente em Departamento de Pessoal.<br><b>Outras informações: </b>Atuação no setor de departamento de pessoal, com todas as rotinas de DP, como processamento de folha de pagamento, cálculos e rotinas trabalhistas, inclusive processuais, e-social, declarações entre outros.<br><br>
+    <b>Tarumã Distribuidora de Bebidas, REVENDA - AMBEV, Brasil.</b><br>2017 - 2018<br><b>Vínculo: </b>Estagiário.<br><b>Enquadramento Funcional: </b>Assistente financeiro.<br><b>Outras informações: </b>Rotinas de setor financeiro; acompanhamento de índices de receitas, índices de liquidez e de acompanhamento de recebimentos. Auditorias - AMBEV; orçamento OBZ, entre outras atividades.<br><br>
+    <b>Colégio Apogeu, APOGEU, Brasil.</b><br>2017 - 2017<br><b>Vínculo: </b>Estagiário.<br><b>Enquadramento Funcional: </b>Assistente Financeiro-Departamento de Pessoal.<br><b>Outras informações: </b>Atuação entre os setores financeiro e departamento pessoal. Contas a receber, contas a pagar, manuseio de cheques e fichas financeiras de clientes, implantação e-social, auditoria interna de caixa, pagamentos e rotinas de serviços bancários, folhas de pagamento, entre outras atividades.<br><br>
+    <b>Academia de Comércio JF, COL. ACADEMIA, Brasil.</b><br>2014 - 2016<br><b>Vínculo: Celetista, Enquadramento Funcional: </b>Menor Aprendiz.<br><b>Outras informações: </b>Atuação no setor de biblioteca - controle de empréstimos e devoluções de livros, arquivamento em biblioteca, restauração de livros entre outras atividades; Atuação administrativa - Tesouraria - manuseio de arquivos de tesouraria, atendimento ao cliente e serviços bancários, entre outras atividades; Atuação pedagógica - Infantil I - manuseio de atividades de alunos, impressão e formatação de arquivos pedagógicos, entre outras atividades.<br><br></p>
 </body>
 </html>
